[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/examples/avatars.gd" type="Script" id=1]
[ext_resource path="res://data/themes/button-theme.tres" type="Theme" id=2]
[ext_resource path="res://data/fonts/list-titles.tres" type="DynamicFont" id=3]
[ext_resource path="res://data/fonts/descriptions.tres" type="DynamicFont" id=4]
[ext_resource path="res://data/fonts/sub-titles.tres" type="DynamicFont" id=5]
[ext_resource path="res://data/images/default-avatar-medium.png" type="Texture" id=6]
[ext_resource path="res://data/images/default-avatar-large.png" type="Texture" id=7]
[ext_resource path="res://data/images/default-avatar-small.png" type="Texture" id=8]
[ext_resource path="res://src/components/main-frame.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Avatars" type="Panel"]
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" parent="." instance=ExtResource( 9 )]
margin_bottom = 695.0

[node name="Title" parent="Frame/Main/Topbar" index="1"]
text = "Player Avatar Example"

[node name="Message" type="Label" parent="Frame/Main" index="1"]
margin_top = 73.0
margin_right = 905.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
text = "This very brief example shows how to obtain a player's Steam profile avatar.  There are three different sizes and, in this example, they will be applied to Sprite nodes. Note that sometimes the API will send back a large avatar bigger than 128 pixels."
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Images" type="GridContainer" parent="Frame/Main" index="2"]
margin_top = 137.0
margin_right = 905.0
margin_bottom = 512.0
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Small" type="Panel" parent="Frame/Main/Images"]
margin_right = 455.0
margin_bottom = 115.0
rect_min_size = Vector2( 425, 80 )
theme = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Images/Small"]
margin_left = 10.0
margin_top = 10.0
margin_right = 217.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Small Avatar - 32 x 32 pixels"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Avatar" type="Sprite" parent="Frame/Main/Images/Small"]
position = Vector2( 10, 40 )
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Medium" type="Panel" parent="Frame/Main/Images"]
margin_left = 480.0
margin_right = 905.0
margin_bottom = 115.0
rect_min_size = Vector2( 425, 115 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Images/Medium"]
margin_left = 10.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Medium Avatar - 64 x 64 pixels"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Avatar" type="Sprite" parent="Frame/Main/Images/Medium"]
position = Vector2( 10, 40 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Large" type="Panel" parent="Frame/Main/Images"]
margin_top = 140.0
margin_right = 455.0
margin_bottom = 375.0
rect_min_size = Vector2( 425, 235 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Frame/Main/Images/Large"]
margin_left = 10.0
margin_top = 10.0
margin_right = 236.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 5 )
text = "Large Avatar - 128 x 128 pixels"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Avatar" type="Sprite" parent="Frame/Main/Images/Large"]
position = Vector2( 10, 40 )
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Title" parent="Frame/Sidebar/Options/List" index="0"]
text = "Load Avatars"

[node name="Small" type="Button" parent="Frame/Sidebar/Options/List" index="1"]
margin_top = 32.0
margin_right = 270.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Show Small Avatar"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Medium" type="Button" parent="Frame/Sidebar/Options/List" index="2"]
margin_top = 70.0
margin_right = 270.0
margin_bottom = 98.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Show Medium Avatar"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Large" type="Button" parent="Frame/Sidebar/Options/List" index="3"]
margin_top = 108.0
margin_right = 270.0
margin_bottom = 136.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Show Large Avatar"
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Spacer" type="Label" parent="Frame/Sidebar/Options/List" index="4"]
margin_top = 146.0
margin_right = 270.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 3 )
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="Frame/Sidebar/Options/List" index="5"]
margin_top = 178.0
margin_right = 270.0
margin_bottom = 206.0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Back To Main Menu"
align = 0
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Frame/Sidebar/Options/List/Small" to="." method="_on_Small_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Large" to="." method="_on_Large_pressed"]
[connection signal="pressed" from="Frame/Sidebar/Options/List/Back" to="." method="_on_Back_pressed"]

[editable path="Frame"]
